# langchain_tutorial

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  pyproject_old.toml
notebook/: basic.ipynb  indexing_similarity_search.ipynb
