[tool.poetry]
name = "langchain-tutorial"
version = "0.1.0"
description = ""
authors = ["baibai25 <kamuy.camel.0225@gmail.com>"]
readme = "README.md"
packages = [{include = "langchain_tutorial"}]

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.0.2"
numpy = "^1.24.3"
langchain = "^0.0.200"
transformers = "^4.30.2"
ipykernel = "^6.23.2"
sentencepiece = "^0.1.99"
xformers = "^0.0.20"
torch = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
